RESOLVED FIXED 242725
AX: InjectedBundle::postSynchronousMessage should not InformPlatformProcessWillSuspend by default
https://bugs.webkit.org/show_bug.cgi?id=242725
Summary AX: InjectedBundle::postSynchronousMessage should not InformPlatformProcessWi...
Tyler Wilcock
Reported 2022-07-13 16:40:48 PDT
Informing some AX clients that they should suspend during rapid-but-short sync IPC calls can cause issues. An example where this is problematic is WebEditorClient::textWillBeDeletedInTextField() to InjectedBundlePageFormClient::shouldPerformActionInTextField, which results in a sync IPC call for every single deleted character.
Attachments
Patch (2.16 KB, patch)
2022-07-13 16:46 PDT, Tyler Wilcock
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2022-07-13 16:40:58 PDT
Tyler Wilcock
Comment 2 2022-07-13 16:46:08 PDT
EWS
Comment 3 2022-07-14 00:13:39 PDT
Committed 252443@main (ff6b58278898): <https://commits.webkit.org/252443@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460872 [details].
Note You need to log in before you can comment on or make changes to this bug.