Cherry-pick ff6b58278898. rdar://problem/96980983

AX: InjectedBundle::postSynchronousMessage should not InformPlatformProcessWillSuspend by default
    https://bugs.webkit.org/show_bug.cgi?id=242725

    Reviewed by Chris Fleizach.

    Informing some AX clients that they should suspend during rapid-but-short sync IPC calls can cause
    issues. An example where this is problematic is WebEditorClient::textWillBeDeletedInTextField() to
    InjectedBundlePageFormClient::shouldPerformActionInTextField, which results in a sync IPC call for
    every single deleted character.

    This essentially reverts https://bugs.webkit.org/show_bug.cgi?id=232159. Through manual testing, I
    have confirmed that we are not re-introducing the issue that bug solved (because of other system
    changes). I've also confirmed that this patch resolves the issue I am investigating.

    * Source/WebKit/WebProcess/InjectedBundle/InjectedBundle.cpp:
    (WebKit::InjectedBundle::postSynchronousMessage):

    Canonical link: https://commits.webkit.org/252443@main

Canonical link: https://commits.webkit.org/252432.5@safari-7614-branch